--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lobo - Desenvolvedor e Designer</title>
-  <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro">
+  <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizado em Manaus/Am">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -25,7 +25,7 @@
     <img src="./imagens/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
     <div>
       <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
-      <p>Localizado no Rio de Janeiro 🏖</p>
+      <p>Localizado no Amazonas/Am 🏖</p>
     </div>
   </main>
 
